View Issue Details

IDProjectCategoryView StatusLast Update
0029515Open CASCADEOCCT:Foundation Classespublic2018-06-29 21:21
ReporteribsAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformMacOSiOS  
Product Version7.3.0 
Target Version7.3.0Fixed in Version7.3.0 
Summary0029515: Foundation Classes, OSD - 'Spawn' contains function that isn't available on iOS
Description'system' function of OSD_Process::Spawn isn't available on iOS
Steps To ReproduceBuild OCCT on iOS
TagsNo tags attached.
Test case numberNot needed

Activities

abv

2018-03-14 09:23

manager   ~0074457

So how it was possible to build OCCT on iOS before??

git

2018-03-14 13:56

administrator   ~0074468

Branch CR29515 has been created by abv.

SHA-1: 5b1a76df8a7bbcbc87a6322b0b0c74c7c710f33c


Detailed log of new commits:

Author: abv
Date: Wed Mar 14 11:02:10 2018 +0300

    0029515: Foundation Classes, OSD - 'Spawn' contains function that isn't available on iOS
    
    Method OSD_Process::Spawn() is removed as useless (not used across OCCT or products).
    Note that on Linux, macOS, and Windows standard C function "system()" can be used directly instead, while iOS apparently does not support spawning separate processes at all.

abv

2018-03-14 13:58

manager   ~0074469

Fix pushed to CR29515, please review. I suppose that testing is not needed, since the removed function has not been used.

kgv

2018-03-14 14:35

developer   ~0074472

Please integrate.

git

2018-03-19 10:05

administrator   ~0074609

Branch CR29515 has been deleted by kgv.

SHA-1: 5b1a76df8a7bbcbc87a6322b0b0c74c7c710f33c

Related Changesets

occt: master 97e96609

2018-03-14 08:02:10

abv


Committer: bugmaster Details Diff
0029515: Foundation Classes, OSD - 'Spawn' contains function that isn't available on iOS

Method OSD_Process::Spawn() is removed as useless (not used across OCCT or products).
Note that on Linux, macOS, and Windows standard C function "system()" can be used directly instead, while iOS apparently does not support spawning separate processes at all.
Affected Issues
0029515
mod - src/OSD/OSD_Process.cxx Diff File
mod - src/OSD/OSD_Process.hxx Diff File

Issue History

Date Modified Username Field Change
2018-02-19 21:50 ibs New Issue
2018-02-19 21:50 ibs Assigned To => abv
2018-03-14 01:19 kgv Target Version 7.4.0 => 7.3.0
2018-03-14 09:23 abv Note Added: 0074457
2018-03-14 09:23 abv Assigned To abv => ibs
2018-03-14 09:23 abv Status new => feedback
2018-03-14 13:56 git Note Added: 0074468
2018-03-14 13:58 abv Note Added: 0074469
2018-03-14 13:58 abv Assigned To ibs => kgv
2018-03-14 13:58 abv Status feedback => resolved
2018-03-14 13:58 abv Steps to Reproduce Updated
2018-03-14 14:35 kgv Note Added: 0074472
2018-03-14 14:35 kgv Assigned To kgv => bugmaster
2018-03-14 14:35 kgv Status resolved => reviewed
2018-03-14 16:12 bugmaster Test case number => Not needed
2018-03-14 16:32 bugmaster Status reviewed => tested
2018-03-18 13:21 bugmaster Changeset attached => occt master 97e96609
2018-03-18 13:21 bugmaster Status tested => verified
2018-03-18 13:21 bugmaster Resolution open => fixed
2018-03-19 10:05 git Note Added: 0074609
2018-06-29 21:16 aiv Fixed in Version => 7.3.0
2018-06-29 21:21 aiv Status verified => closed