0029515: Foundation Classes, OSD - 'Spawn' contains function that isn't available on iOS

Method OSD_Process::Spawn() is removed as useless (not used across OCCT or products).
Note that on Linux, macOS, and Windows standard C function "system()" can be used directly instead, while iOS apparently does not support spawning separate processes at all.